fix: refactor collapse for bug and fix video poster url

--- a/src/css/collapse.less
+++ b/src/css/collapse.less
@@ -5,6 +5,10 @@
         margin: 0;
         line-height: 1.2;
         word-break: break-word;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        text-align: justify;
     }
 
     .toggle-fold-btn {
